Replace preferences with settings in help book

--- a/Vienna Help/Resources/en.lproj/Vienna.html
+++ b/Vienna Help/Resources/en.lproj/Vienna.html
@@ -27,7 +27,7 @@
           <p class="header">How do I …?</p>
           <p><a href="faq.html">Frequently asked questions, getting support and troubleshooting steps.</a></p>
           <p class="header">Advanced settings</p>
-          <p><a href="advanced.html">Explains the settings in the Advanced Preferences.</a></p>
+          <p><a href="advanced.html">Explains Advanced settings in Vienna.</a></p>
         </td>
       </tr>
     </tbody>
