--- a/Vienna Help/Resources/en.lproj/keyboard.html
+++ b/Vienna Help/Resources/en.lproj/keyboard.html
@@ -85,7 +85,7 @@
     </tr>
     <tr>
       <td>Alt-Click</td>
-      <td>Open the clicked link, overriding your preference for opening links in external browser.</td>
+      <td>Open the clicked link, overriding your setting for opening links in external browser.</td>
     </tr>
     <tr>
       <td>Shift-Command-B</td>
@@ -185,7 +185,7 @@
     </tr>
     <tr>
       <td>Command-,</td>
-      <td>Opens the Vienna preferences panel.</td>
+      <td>Opens Vienna settings.</td>
     </tr>
     <tr>
       <td>Alt-Command-Backspace</td>
@@ -201,7 +201,7 @@
     </tr>
     <tr>
       <td>Alt-Enter/Alt-Return</td>
-      <td>Opens the selected article's original web page, overriding your preference for opening links in external browser.</td>
+      <td>Opens the selected article's original web page, overriding your setting for opening links in external browser.</td>
     </tr>
     <tr>
       <td>Shift-Command-Z</td>
