--- a/Vienna Help/Resources/en.lproj/faq.html
+++ b/Vienna Help/Resources/en.lproj/faq.html
@@ -75,7 +75,7 @@
   <h2><a id="What_do_the_green_dots_mean_in_the_list_of_articles" name="What_do_the_green_dots_mean_in_the_list_of_articles">What do the green dots mean in the list of articles?</a></h2>
   <p>The blue dots are for new articles, and the green dots are for updated articles: articles whose text has changed since they were last downloaded.</p>
   <h2><a id="How_do_I_use_Auto_Expire_and_what_does_it_do" name="How_do_I_use_Auto_Expire_and_what_does_it_do">How do I use Auto Expire and what does it do?</a></h2>
-  <p>Auto-expire moves articles older than a certain number of days to the Trash folder. It allows you to keep your folders manageable by only retaining articles that are recent. The auto-expire runs both when Vienna starts and after you have refreshed any subscriptions. To control the age of articles to auto-expire, change the "Move articles to Trash" option in Preferences.</p>
+  <p>Auto-expire moves articles older than a certain number of days to the Trash folder. It allows you to keep your folders manageable by only retaining articles that are recent. The auto-expire runs both when Vienna starts and after you have refreshed any subscriptions. To control the age of articles to auto-expire, change the "Move articles to Trash" option in General settings.</p>
   <p>Auto-expire will NOT remove unread or flagged articles. It assumes that you haven't read these articles and thus leaves them alone.</p>
   <h2><a id="How_do_I_create_my_own_styles" name="How_do_I_create_my_own_styles">How do I create my own styles?</a></h2>
   <p>See the <a href="https://www.vienna-rss.com/extras/creating-custom-styles/">Custom Styles page</a> for instructions.</p>
