Import translations from Crowdin

--- a/Vienna Help/Resources/da.lproj/Vienna.html
+++ b/Vienna Help/Resources/da.lproj/Vienna.html
@@ -23,11 +23,11 @@
           <p class="header">Introduktion til Vienna</p>
           <p><a href="intro.html">Lær hvordan du starter med Vienna.</a></p>
           <p class="header">Tastaturgenveje</p>
-          <p><a href="keyboard.html">Opdag tastaturgenveje for ofte brubte kommandoer</a></p>
-          <p class="header">Hvordan gør jeg?</p>
-          <p><a href="faq.html">Ofte stillede spørgsmål, få support og fejlsøgning</a></p>
+          <p><a href="keyboard.html">Opdag tastaturgenveje for ofte brugte kommandoer.</a></p>
+          <p class="header">Hvordan gør jeg …?</p>
+          <p><a href="faq.html">Ofte stillede spørgsmål, få support og fejlsøgning.</a></p>
           <p class="header">Avancerede indstillinger</p>
-          <p><a href="advanced.html">Explains the settings in the Advanced Preferences.</a></p>
+          <p><a href="advanced.html">Explains Advanced settings in Vienna.</a></p>
         </td>
       </tr>
     </tbody>
