--- a/Vienna Help/Resources/da.lproj/advanced.html
+++ b/Vienna Help/Resources/da.lproj/advanced.html
@@ -3,14 +3,14 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Avancerede indstillinger</title>
+  <title>Avencerede indstillinger i Vienna</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Explains advanced settings in Vienna." />
+  <meta name="description" content="Explains Advanced settings in Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="AdvancedSettingsSection" name="AdvancedSettingsSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Avancerede indstillinger</span>
-  <p>Sektionen for avancerede instillinerg giver mulighed for at ændre meget specifikke indstillinger i Vienna som ikke er essentielle for normal brug, men som kan klare nogle problemer som kan være bragt op på support-forummet. Denne sider detajlerer de avancerede indstillinger og deres funktioner.</p>
+  <a id="AdvancedSettingsSection" name="AdvancedSettingsSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Avancerede indstillinger i Vienna</span>
+  <p>Avencerede indstillinger giver meget specifikke muligheder der ikke er essentielle under normalt brug, men som kan ordne problemer efter anvisning på supportforummet. Denne sider detajlerer de avancerede indstillinger og deres funktioner.</p>
   <h2><b>Aktiver JavaScript i den interne browser</b></h2>
   <p>Aktiverer eller slår understøttelse for JavaScript skripts fra i Viennas interne browser. Som standard er dette slået til. Ved at slå denne instilling fra, vil JavaScript kode på hjemmesider ikke få tilladelse til at køre. Dette kan klare problemer med nogle sider som bruger skripter til pop-up-vinduer eller andet utilset adfærd, men slår man det fra kan det få nogle hjemmesider til at fremstå med fejl eller ligefrem få dem til at fungere ukorrekt.</p>
 </body>
