--- a/Vienna Help/Resources/de.lproj/Vienna.html
+++ b/Vienna Help/Resources/de.lproj/Vienna.html
@@ -23,7 +23,7 @@
           <p class="header">Einleitung zu Vienna</p>
           <p><a href="intro.html">Erste Schritte mit Vienna.</a></p>
           <p class="header">Tastatur Kurzbefehle</p>
-          <p><a href="keyboard.html">Kurzbefehle für häufig verwendete Befehle</a></p>
+          <p><a href="keyboard.html">Kurzbefehle für häufig verwendete Befehle.</a></p>
           <p class="header">Was tun?</p>
           <p><a href="faq.html">Häufig gestellte Fragen, Support und Fehlerbeseitigung.</a></p>
           <p class="header">Erweiterte Einstellungen</p>
