--- a/Vienna Help/Resources/de.lproj/keyboard.html
+++ b/Vienna Help/Resources/de.lproj/keyboard.html
@@ -185,7 +185,7 @@
     </tr>
     <tr>
       <td>Befehl-Komma (,)</td>
-      <td>Opens the Vienna preferences panel.</td>
+      <td>Opens Vienna settings.</td>
     </tr>
     <tr>
       <td>Wahl-Befehl-Rückschritt</td>
@@ -201,7 +201,7 @@
     </tr>
     <tr>
       <td>Wahl-Zeilenschalter</td>
-      <td>Opens the selected article's original web page, overriding your preference for opening links in external browser.</td>
+      <td>Opens the selected article's original web page, overriding your setting for opening links in external browser.</td>
     </tr>
     <tr>
       <td>Umschalt-Befehl-Z</td>
