--- a/Vienna Help/Resources/fr.lproj/Vienna.html
+++ b/Vienna Help/Resources/fr.lproj/Vienna.html
@@ -23,7 +23,7 @@
           <p class="header">Introduction à Vienna</p>
           <p><a href="intro.html">Apprendre comment débuter avec Vienna.</a></p>
           <p class="header">Raccourcis clavier</p>
-          <p><a href="keyboard.html">Découvrir les raccourcis clavier pour les commandes courantes</a></p>
+          <p><a href="keyboard.html">Découvrir les raccourcis clavier pour les commandes courantes.</a></p>
           <p class="header">Comment faire&nbsp;?</p>
           <p><a href="faq.html">Questions fréquemment posées, obtenir du support, étapes de dépannage.</a></p>
           <p class="header">Réglages avancés</p>
