--- a/Vienna Help/Resources/it.lproj/Vienna.html
+++ b/Vienna Help/Resources/it.lproj/Vienna.html
@@ -23,11 +23,11 @@
           <p class="header">Introduzione a Vienna</p>
           <p><a href="intro.html">Impara come iniziare ad usare Vienna.</a></p>
           <p class="header">Abbreviazioni da Tastiera</p>
-          <p><a href="keyboard.html">Scopri le abbreviazioni da tastiera per i comandi comuni</a></p>
+          <p><a href="keyboard.html">Scopri le abbreviazioni da tastiera per i comandi comuni.</a></p>
           <p class="header">Come Faccio A</p>
           <p><a href="faq.html">Domande Frequenti, come ottenere supporto e passi da eseguire per la risoluzione dei problemi.</a></p>
-          <p class="header">Advanced Settings</p>
-          <p><a href="advanced.html">Explains the settings in the Advanced Preferences.</a></p>
+          <p class="header">Advanced settings</p>
+          <p><a href="advanced.html">Explains Advanced settings in Vienna.</a></p>
         </td>
       </tr>
     </tbody>
