--- a/Vienna Help/Resources/nl.lproj/Vienna.html
+++ b/Vienna Help/Resources/nl.lproj/Vienna.html
@@ -23,11 +23,11 @@
           <p class="header">Inleiding voor Vienna</p>
           <p><a href="intro.html">De eerste stappen met Vienna.</a></p>
           <p class="header">Toetscombinaties</p>
-          <p><a href="keyboard.html">Ontdek toetscombinaties voor veelgebruikte commando's</a></p>
-          <p class="header">Hoe kan ik?</p>
+          <p><a href="keyboard.html">Ontdek toetscombinaties voor veelgebruikte commando's.</a></p>
+          <p class="header">Hoe doe ik&nbsp;…?</p>
           <p><a href="faq.html">Veelgestelde vragen, ondersteuning verkrijgen en problemen oplossen.</a></p>
-          <p class="header">Advanced Settings</p>
-          <p><a href="advanced.html">Explains the settings in the Advanced Preferences.</a></p>
+          <p class="header">Geavanceerde instellingen</p>
+          <p><a href="advanced.html">Geeft uitleg over geavanceerde instellingen.</a></p>
         </td>
       </tr>
     </tbody>
