--- a/Vienna Help/Resources/nl.lproj/faq.html
+++ b/Vienna Help/Resources/nl.lproj/faq.html
@@ -3,13 +3,13 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>How Do I?</title>
+  <title>Hoe kan ik&nbsp;… in Vienna?</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Frequently asked questions about Vienna, getting support and troubleshooting steps." />
+  <meta name="description" content="Veelgestelde vragen over Vienna, ondersteuning verkrijgen en problemen oplossen." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Hoe kan ik?</span>
+  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Hoe kan ik&nbsp;… in Vienna?</span>
   <p>Hier zijn een aantal vragen die naar voren kwamen tijdens de ontwikkeling van Vienna in de test-fase. Kijk hiervoor op <a href="https://www.vienna-rss.com/faq">Official Vienna FAQ Page</a> en de laatste hints en tips voor Vienna.</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">Ik heb een probleem gevonden in Vienna. Hoe kan ik dit melden?</a></li>
