--- a/Vienna Help/Resources/nl.lproj/keyboard.html
+++ b/Vienna Help/Resources/nl.lproj/keyboard.html
@@ -3,13 +3,13 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Toetscombinaties</title>
+  <title>Toetscombinaties in Vienna</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Discover keyboard shortcuts for common commands in Vienna." />
+  <meta name="description" content="Ontdek toetscombinaties voor veelgebruikte commando's in Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Toetscombinaties</span>
+  <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Toetscombinaties in Vienna</span>
   <p>U kunt met uw toetsenbord snel veel taken uitvoeren in Vienna. U vindt de combinaties door in de menus te kijken en in de onderstaande lijst. Vele items in Vienna hebben ook een contextueel menu. Om een contextueel menu te openen klikt u op een item terwijl u de Control toets ingedrukt houd.</p>
   <p>Om een commando uit te voeren, druk de onderstaande toetsen in.</p>
   <p><b>Toets legenda</b></p>
