--- a/Vienna Help/Resources/sv.lproj/Vienna.html
+++ b/Vienna Help/Resources/sv.lproj/Vienna.html
@@ -23,8 +23,8 @@
           <p class="header">Introduktion till Vienna</p>
           <p><a href="intro.html">Lär dig hur du kommer igång med Vienna.</a></p>
           <p class="header">Kortkommandon</p>
-          <p><a href="keyboard.html">Upptäck kortkommandon för vanliga kommandon</a></p>
-          <p class="header">Hur gör jag?</p>
+          <p><a href="keyboard.html">Upptäck kortkommandon för vanliga kommandon.</a></p>
+          <p class="header">Hur gör jag …?</p>
           <p><a href="faq.html">Vanligt förekommande frågor, få support och felsökningssteg.</a></p>
           <p class="header">Avancerade inställningar</p>
           <p><a href="advanced.html">Förklarar inställningarna i Avancerade inställningar.</a></p>
