--- a/Vienna Help/Resources/sv.lproj/faq.html
+++ b/Vienna Help/Resources/sv.lproj/faq.html
@@ -3,13 +3,13 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Hur gör jag?</title>
+  <title>Hur gör jag i ... Vienna?</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="description" content="Vanligt förekommande frågor, få support och felsökningssteg." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Hur gör jag?</span>
+  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Hur gör jag ... i Vienna?</span>
   <p>Nedan är några av de vanligaste frågorna som ställs om Vienna medan den testades i förhand. Se den <a href="http://www.vienna-rss.com/vienna_faq.html">officiella sidan med vanliga frågor om Vienna</a> för dessa och de senaste tipsen om hur du använder Vienna.</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">Jag har hittat ett problem med Vienna. Hur rapporterar jag det?</a></li>
