--- a/Vienna Help/Resources/sv.lproj/keyboard.html
+++ b/Vienna Help/Resources/sv.lproj/keyboard.html
@@ -3,13 +3,13 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Kortkommandon</title>
+  <title>Tangentbordsgenvägar i Vienna</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="description" content="Upptäck kortkommandon för vanliga kommandon i Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Kortkommandon</span>
+  <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Tangentbordsgenvägar i Vienna</span>
   <p>Du kan använda ditt tangentbord för att snabbt utföra många uppgifter i Vienna. För att hitta genvägarna för vanliga kommandon, titta i menyerna (eller se listan längst ner på denna sida). Många objekt i Vienna som mapplistan och artikellistan har också kontextmenyer. För att se en kontextmeny, tryck på Ctrl-tangenten och klicka på objektet.</p>
   <p>För att utföra en åtgärd, tryck på kortkommandot som anges nedan.</p>
   <table width="662" border="0" cellspacing="0" id="table1" cellpadding="8">
