--- a/Vienna Help/Resources/zh-Hant.lproj/Vienna.html
+++ b/Vienna Help/Resources/zh-Hant.lproj/Vienna.html
@@ -26,8 +26,8 @@
           <p><a href="keyboard.html">一般使用時的常用快速鍵</a></p>
           <p class="header">我該怎麼做？</p>
           <p><a href="faq.html">常見問題、以及如何取得技術支援</a></p>
-          <p class="header">Advanced Settings</p>
-          <p><a href="advanced.html">Explains the settings in the Advanced Preferences.</a></p>
+          <p class="header">Advanced settings</p>
+          <p><a href="advanced.html">Explains Advanced settings in Vienna.</a></p>
         </td>
       </tr>
     </tbody>
