--- a/Vienna Help/Resources/da.lproj/keyboard.html
+++ b/Vienna Help/Resources/da.lproj/keyboard.html
@@ -3,13 +3,13 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Tastaturgenveje</title>
+  <title>Tastaturgenveje i Vienna</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="description" content="Discover keyboard shortcuts for common commands in Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Tastaturgenveje</span>
+  <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Tastaturgenveje i Vienna</span>
   <p>Du kan bruge dit tastatur til hurtigt at klare mange funktioner i Vienna. For at finde genveje for ofte brugte kommandoer, kig da i menuerne (eller se listen i bunden af denne side). Mange emner i Vienna, såsom mappefanen og artikellistefanen, har også contextual menuer. For at se en contextualmenu, hold Kontrol-tasten nede og klik på et emne.</p>
   <p>For at gøre en handling, tryk genvejstasterne indikeret nedenfor.</p>
   <table width="662" border="0" cellspacing="0" id="table1" cellpadding="8">
@@ -185,7 +185,7 @@
     </tr>
     <tr>
       <td>Command-,</td>
-      <td>Opens the Vienna preferences panel.</td>
+      <td>Opens Vienna settings.</td>
     </tr>
     <tr>
       <td>Alt-Command-Backspace</td>
