--- a/Vienna Help/Resources/nl.lproj/advanced.html
+++ b/Vienna Help/Resources/nl.lproj/advanced.html
@@ -3,14 +3,14 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Geavanceerde voorkeuren</title>
+  <title>Geavanceerde instellingen in Vienna</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Explains advanced settings in Vienna." />
+  <meta name="description" content="Geeft uitleg over geavanceerde instellingen in Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="AdvancedSettingsSection" name="AdvancedSettingsSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Geavanceerde voorkeuren</span>
-  <p>De "Geavanceerd" sectie van de Voorkeuren geeft de mogelijkheid om specifieke opties van Vienna te wijzigen die niet essentieel zijn voor het normale gebruik, maar bepaalde problemen kan oplossen zoals geadviseerd door het support forum. Deze pagina geeft uitleg over die mogelijkheden.</p>
+  <a id="AdvancedSettingsSection" name="AdvancedSettingsSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Geavanceerde instellingen in Vienna</span>
+  <p>Geavanceerde instellingen geven de mogelijkheid om specifieke opties te wijzigen die niet essentieel zijn voor het normale gebruik, maar bepaalde problemen kunnen oplossen zoals geadviseerd door het support-forum. Deze pagina geeft uitleg over die mogelijkheden. Deze pagina geeft uitleg over die mogelijkheden.</p>
   <h2><b>Activeer JavaScript in interne browser</b></h2>
   <p>Schakelt ondersteuning voor JavaScript scripts in de interne browser van Vienna aan of uit. Standaard is dit ingeschakeld. Door dit uit te schakelen kan JavaScript code op webpagina's niet uitgevoerd worden. Dit kan problemen oplossen zoals pop-up vensters of ander ongewenst c.q. onverwacht gedrag. Echter dit kan er ook toe leiden dat webpagina's niet volledig laden of niet werken, danwel onvolledig werken.</p>
 </body>
