--- a/Vienna Help/Resources/nl.lproj/intro.html
+++ b/Vienna Help/Resources/nl.lproj/intro.html
@@ -3,13 +3,13 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Introduction to Vienna</title>
+  <title>Inleiding voor Vienna</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Learn how to get started with Vienna." />
+  <meta name="description" content="De eerste stappen met Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="intro-page" name="intro-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span> <span class="header">Inleiding</span>
+  <a id="intro-page" name="intro-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span> <span class="header">Inleiding voor Vienna</span>
   <p>Vienna is een programma waarmee u RSS en Atom feeds kunt lezen op uw Mac OS X computer. Het automatiseert het ophalen van nieuwe artikelen van uw abonnementen en bewaart deze in een lokale database zodat u hen ook offline kan lezen. U kunt artikelen doorzoeken op sleutelwoorden, markeren voor later en feeds organiseren in mappen. U kunt slimme mappen aanmaken die het eenvoudig maken om automatisch artikelen bij elkaar te groeperen gebaseerd op zoekcriteria. De ingebouwde webbrowser geeft u de mogelijkheid om de webpagina's van de artikelen te bekijken of om links te volgen in aparte tabbladen.</p>
   <p>Vienna is ontworpen met als doel eenvoud. Veel ruimte voor uw nieuws en een simpele bediening.</p>
   <p><b>Beginnen met Vienna</b></p>
