--- a/Vienna Help/Resources/zh-Hant.lproj/advanced.html
+++ b/Vienna Help/Resources/zh-Hant.lproj/advanced.html
@@ -3,14 +3,14 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Advanced Settings</title>
+  <title>Advanced settings in Vienna</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Explains advanced settings in Vienna." />
+  <meta name="description" content="Explains Advanced settings in Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="AdvancedSettingsSection" name="AdvancedSettingsSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Advanced Settings</span>
-  <p>The Advanced section of the Preferences provides options to change very specific settings in Vienna that are not essential for normal use but may resolve some issues as advised by the support forum. This page details the advanced settings and their function.</p>
+  <a id="AdvancedSettingsSection" name="AdvancedSettingsSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Advanced settings in Vienna</span>
+  <p>Advanced settings provide very specific options that are not essential for normal use but may resolve some issues as advised by the support forum. This page details those settings and their function.</p>
   <h2><b>Enable JavaScript in internal browser</b></h2>
   <p>Enables or disables support for JavaScript scripting in the Vienna internal browser. By default this is enabled. By turning this setting off, JavaScript code on web pages will not be allowed to run. This may resolve problems with pages that use scripting to pop up windows or other unexpected behaviour but turning the setting off may also cause some web pages to appear incomplete or fail to function correctly.</p>
 </body>
