Link to HTTPS-URLs where available

--- a/Vienna Help/Resources/en.lproj/faq.html
+++ b/Vienna Help/Resources/en.lproj/faq.html
@@ -81,7 +81,7 @@
   <p>See the <a href="https://www.vienna-rss.com/extras/creating-custom-styles/">Custom Styles page</a> for instructions.</p>
   <h2><a id="How_do_I_create_my_own_scripts" name="How_do_I_create_my_own_scripts">How do I create my own scripts?</a></h2>
   <p>Vienna's scripts are written using AppleScript. See the <a href="http://developer.apple.com/applescript/">Apple resource page</a> for more details.</p>
-  <p>One way to get started is to download one of the existing scripts like <a href="http://www.cortig.net/files/ShareWithPapers.zip">Cortig's original Share with Papers plugin</a> or <a href="https://github.com/reefdog/Vienna-to-Yojimbo-AppleScripts">reefdog's Vienna to Yojimbo script</a> and view them in the AppleScript editor.</p>
+  <p>One way to get started is to download one of the existing scripts like <a href="https://www.cortig.net/files/ShareWithPapers.zip">Cortig's original Share with Papers plugin</a> or <a href="https://github.com/reefdog/Vienna-to-Yojimbo-AppleScripts">reefdog's Vienna to Yojimbo script</a> and view them in the AppleScript editor.</p>
   <p>To submit your own script, send it the support forum and after it has been reviewed, it will be made available on the Downloads page.</p>
   <h2><a id="How_do_I_request_an_enhancement_in_Vienna" name="How_do_I_request_an_enhancement_in_Vienna">How do I request an enhancement in Vienna?</a></h2>
   <p>Post a message over at the <a href="https://github.com/ViennaRSS/vienna-rss/issues">issues list</a>.</p>
