Import translations from Crowdin

--- a/Vienna Help/Resources/es.lproj/faq.html
+++ b/Vienna Help/Resources/es.lproj/faq.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">¿Cómo puedo...?</span>
-  <p>Le presentamos algunas de las preguntas más frecuentes acerca de Vienna. Consulte el <a href="http://www.vienna-rss.com/vienna_faq.html">F.A.Q. oficial</a> para obtener respuestas más concretas y, obviamente, también los últimos consejos prácticos para el uso de Vienna.</p>
+  <p>Le presentamos algunas de las preguntas más frecuentes acerca de Vienna. Consulte el <a href="https://www.vienna-rss.com/faq">F.A.Q. oficial</a> para obtener respuestas más concretas y, obviamente, también los últimos consejos prácticos para el uso de Vienna.</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">He apreciado un problema en Vienna. ¿Cómo informo de ello?</a></li>
     <li><a href="#How_can_I_see_what_happened_when_my_subscriptions_are_refreshed">¿Cómo puedo comprobar si mis suscripciones se han actualizado?</a></li>
@@ -80,8 +80,8 @@
   <h2><a id="How_do_I_create_my_own_styles" name="How_do_I_create_my_own_styles">¿Cómo puedo crear mis propios estilos?</a></h2>
   <p>Consulte la <a href="http://www.vienna-rss.com/vienna_styles.html">página de personalización de estilos</a> para obtener las correspondientes instrucciones.</p>
   <h2><a id="How_do_I_create_my_own_scripts" name="How_do_I_create_my_own_scripts">¿Cómo puedo crear mis propios scripts?</a></h2>
-  <p>Los scripts de Vienna se escriben utilizando AppleScript. Consulte la <a href="http://www.apple.com/macosx/features/applescript/resources.html">página de recursos de Apple</a> para obtener más detalles acerca de él y de su uso.</p>
-  <p>Una manera de comenzar es descargar uno de los scripts ya existentes en la <a href="http://www.vienna-rss.com/vienna_files.html">página de descargas de Vienna</a> y abrirlo con el editor de AppleScripts. Consulte también la <a href="http://www.vienna-rss.com/vienna_scripting.html">página de scripts</a> para obtener más detalles de los scripts para Vienna y ejemplos de lo que se puede conseguir.</p>
+  <p>Los scripts de Vienna se escriben utilizando AppleScript. Consulte la <a href="https://developer.apple.com/library/archive/documentation/AppleScript/Conceptual/AppleScriptX/AppleScriptX.html">página de recursos de Apple</a> para obtener más detalles acerca de él y de su uso.</p>
+  <p>Una manera de comenzar es descargar uno de los scripts ya existentes en la <a href="https://www.cortig.net/files/ShareWithPapers.zip">página de descargas de Vienna</a> y abrirlo con el editor de AppleScripts. Consulte también la <a href="https://github.com/reefdog/Vienna-to-Yojimbo-AppleScripts">página de scripts</a> para obtener más detalles de los scripts para Vienna y ejemplos de lo que se puede conseguir.</p>
   <p>Si desea presentar su propio script a la comunidad de usuarios de la aplicación, envíelo a <a href="mailto:steve@opencommunity.co.uk">steve@opencommunity.co.uk</a> y una vez haya sido probado, se pondrá a disposición de todos en la página de descargas.</p>
   <h2><a id="How_do_I_request_an_enhancement_in_Vienna" name="How_do_I_request_an_enhancement_in_Vienna">¿Cómo puedo sugerir una mejora para Vienna?</a></h2>
   <p>Escriba un mensaje en el <a href="https://github.com/ViennaRSS/vienna-rss/discussions">foro de soporte</a>. Todas las mejoras son incluidas en un archivo «To-Do» que se incluye en el código como guía para futuros desarrollos.</p>
