--- a/Vienna Help/Resources/fr.lproj/faq.html
+++ b/Vienna Help/Resources/fr.lproj/faq.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Comment faire&nbsp;?</span>
-  <p>Ci-dessous vous trouverez les questions les plus courantes à propos de Vienna lors de sa phase de beta-test. Reportez-vous à la page <a href="http://www.vienna-rss.com/vienna_faq.html">Official Vienna FAQ</a> (en anglais) pour les dernières astuces pour utiliser Vienna.</p>
+  <p>Ci-dessous vous trouverez les questions les plus courantes à propos de Vienna lors de sa phase de beta-test. Reportez-vous à la page <a href="https://www.vienna-rss.com/faq">Official Vienna FAQ</a> (en anglais) pour les dernières astuces pour utiliser Vienna.</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">J'ai rencontré un problème avec Vienna. Comment faire un rapport&nbsp;?</a></li>
     <li><a href="#How_can_I_see_what_happened_when_my_subscriptions_are_refreshed">Comment puis-je voir ce qui se passe quand les abonnements sont rafraîchis&nbsp;?</a></li>
@@ -81,8 +81,8 @@
   <h2><a id="How_do_I_create_my_own_styles" name="How_do_I_create_my_own_styles">Comment créer mes propres styles&nbsp;?</a></h2>
   <p>Voir la page <a href="https://www.vienna-rss.com/extras/creating-custom-styles/">Styles personnalisés</a> pour les instructions.</p>
   <h2><a id="How_do_I_create_my_own_scripts" name="How_do_I_create_my_own_scripts">Comment créer mes propres scripts&nbsp;?</a></h2>
-  <p>Le pilotage de Vienna par des scripts est possible en utilisant AppleScript. Voir la page de <a href="http://developer.apple.com/applescript/">ressources Apple</a> pour plus de détails.</p>
-  <p>Un moyen de débuter est de télécharger un des scripts existants comme celui du <a href="http://www.cortig.net/files/ShareWithPapers.zip">plugin de partage avec Papers</a> écrit par Cortig ou le script de partage de <a href="https://github.com/reefdog/Vienna-to-Yojimbo-AppleScripts">Vienna vers Yojimbo</a> écrit par reefdog et de les visualiser dans l'éditeur d'AppleScript.</p>
+  <p>Le pilotage de Vienna par des scripts est possible en utilisant AppleScript. Voir la page de <a href="https://developer.apple.com/library/archive/documentation/AppleScript/Conceptual/AppleScriptX/AppleScriptX.html">ressources Apple</a> pour plus de détails.</p>
+  <p>Un moyen de débuter est de télécharger un des scripts existants comme celui du <a href="https://www.cortig.net/files/ShareWithPapers.zip">plugin de partage avec Papers</a> écrit par Cortig ou le script de partage de <a href="https://github.com/reefdog/Vienna-to-Yojimbo-AppleScripts">Vienna vers Yojimbo</a> écrit par reefdog et de les visualiser dans l'éditeur d'AppleScript.</p>
   <p>Pour soumettre vos propres scripts, envoyez-les dans le forum de support, et après qu'ils sont revus, ils seront diffusés sur la page de téléchargement.</p>
   <h2><a id="How_do_I_request_an_enhancement_in_Vienna" name="How_do_I_request_an_enhancement_in_Vienna">Comment demander des améliorations dans Vienna&nbsp;?</a></h2>
   <p>Laisser un message sur la <a href="https://github.com/ViennaRSS/vienna-rss/issues">liste de problèmes ou demandes</a> (en anglais).</p>
