--- a/Vienna Help/Resources/it.lproj/faq.html
+++ b/Vienna Help/Resources/it.lproj/faq.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Come Faccio A?</span>
-  <p>Qui sotto ci sono alcune delle domande più comuni che ci sono state fatte su Vienna mentre veniva effettuato il test pre-rilascio. Vai alla <a href="http://www.vienna-rss.com/vienna_faq.html">Pagina FAQ Ufficiale di Vienna</a> per questi e i più recenti trucchi e suggerimenti per usare Vienna.</p>
+  <p>Qui sotto ci sono alcune delle domande più comuni che ci sono state fatte su Vienna mentre veniva effettuato il test pre-rilascio. Vai alla <a href="https://www.vienna-rss.com/faq">Pagina FAQ Ufficiale di Vienna</a> per questi e i più recenti trucchi e suggerimenti per usare Vienna.</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">Ho trovato un problema in Vienna. Come lo segnalo?</a></li>
     <li><a href="#How_can_I_see_what_happened_when_my_subscriptions_are_refreshed">Come posso vedere cosa è successo quando sono state aggiornate le mie iscrizioni?</a></li>
@@ -80,8 +80,8 @@
   <h2><a id="How_do_I_create_my_own_styles" name="How_do_I_create_my_own_styles">Come faccio a creare i miei stili?</a></h2>
   <p>Vedi la <a href="http://www.vienna-rss.com/vienna_styles.html">pagina Custom Styles</a> per istruzioni.</p>
   <h2><a id="How_do_I_create_my_own_scripts" name="How_do_I_create_my_own_scripts">ome faccio a creare i miei script?</a></h2>
-  <p>Gli script di Vienna sono scritti usando AppleScript. Vedi la <a href="http://www.apple.com/macosx/features/applescript/resources.html">pagine risorse di Apple</a> per ulteriori dettagli.</p>
-  <p>Un modo per iniziare è scaricare uno degli script esistenti dalla <a href="http://www.vienna-rss.com/vienna_files.html">pagina Vienna Downloads</a> e visualizzarlo nell'editor AppleScript. Dai uno sguardo anche alla <a href="http://www.vienna-rss.com/vienna_scripting.html">pagina Scripts</a> per ulteriori dettagli sul dizionario di scripting di Vienna ed esempi di cosa puoi ottenere.</p>
+  <p>Gli script di Vienna sono scritti usando AppleScript. Vedi la <a href="https://developer.apple.com/library/archive/documentation/AppleScript/Conceptual/AppleScriptX/AppleScriptX.html">pagine risorse di Apple</a> per ulteriori dettagli.</p>
+  <p>Un modo per iniziare è scaricare uno degli script esistenti dalla <a href="https://www.cortig.net/files/ShareWithPapers.zip">pagina Vienna Downloads</a> e visualizzarlo nell'editor AppleScript. Dai uno sguardo anche alla <a href="https://github.com/reefdog/Vienna-to-Yojimbo-AppleScripts">pagina Scripts</a> per ulteriori dettagli sul dizionario di scripting di Vienna ed esempi di cosa puoi ottenere.</p>
   <p>Per pubblicare il tuo script, invialo a <a href="mailto:steve@opencommunity.co.uk">steve@opencommunity.co.uk</a> e dopo esser stato controllato, sarà reso disponibile sulla pagina Downloads.</p>
   <h2><a id="How_do_I_request_an_enhancement_in_Vienna" name="How_do_I_request_an_enhancement_in_Vienna">Come faccio a richiedere un miglioramento in Vienna?</a></h2>
   <p>Invia un messaggio sul <a href="https://github.com/ViennaRSS/vienna-rss/discussions">forum di supporto</a>. Tutti i miglioramenti richiesti sono registrati nel file TODO incluso insieme al codice sorgente come guida per gli sviluppatori futuri.</p>
