--- a/Vienna Help/Resources/nl.lproj/faq.html
+++ b/Vienna Help/Resources/nl.lproj/faq.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Hoe kan ik&nbsp;… in Vienna?</span>
-  <p>Hier zijn een aantal vragen die naar voren kwamen tijdens de ontwikkeling van Vienna in de test-fase. Kijk hiervoor op <a href="https://www.vienna-rss.com/faq">Official Vienna FAQ Page</a> en de laatste hints en tips voor Vienna.</p>
+  <p>Hier zijn een aantal vragen die naar voren kwamen tijdens de ontwikkeling van Vienna in de test-fase. Kijk hiervoor op <a href="https://www.vienna-rss.com/faq">Vienna's FAQ-webpagina</a> en de laatste hints en tips voor Vienna.</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">Ik heb een probleem gevonden in Vienna. Hoe kan ik dit melden?</a></li>
     <li><a href="#How_can_I_see_what_happened_when_my_subscriptions_are_refreshed">Hoe kan ik zien wat er gebeurt als mijn abonnementen worden bijgewerkt?</a></li>
@@ -80,8 +80,8 @@
   <h2><a id="How_do_I_create_my_own_styles" name="How_do_I_create_my_own_styles">Hoe creëer ik mijn eigen stijlen?</a></h2>
   <p>Kijk op de <a href="https://www.vienna-rss.com/extras/creating-custom-styles/">Custom Styles page</a> voor instructies.</p>
   <h2><a id="How_do_I_create_my_own_scripts" name="How_do_I_create_my_own_scripts">Hoe kan ik mijn eigen scripts maken?</a></h2>
-  <p>Vienna's scripts zijn geschreven in AppleScript. Kijk op <a href="http://developer.apple.com/applescript/">Apple resource page</a> voor meer informatie.</p>
-  <p>Om te beginnen kan u een bestaand script downladen zoals <a href="http://www.cortig.net/files/ShareWithPapers.zip">Cortig's original Share with Papers plugin</a> of <a href="https://github.com/reefdog/Vienna-to-Yojimbo-AppleScripts">reefdog's Vienna to Yojimbo script</a> en dit bekijken in AppleScript editor.</p>
+  <p>Vienna's scripts zijn geschreven in AppleScript. Kijk op <a href="https://developer.apple.com/library/archive/documentation/AppleScript/Conceptual/AppleScriptX/AppleScriptX.html">Apple's website</a> voor meer informatie.</p>
+  <p>Een manier om te beginnen is door een van de bestaande scripts te downloaden, zoals <a href="https://www.cortig.net/files/ShareWithPapers.zip">Cortig's Share with Papers-plug-in</a> of <a href="https://github.com/reefdog/Vienna-to-Yojimbo-AppleScripts">reefdog's Vienna to Yojimbo-script</a>, en deze te bekijken met Scripteditor.</p>
   <p>Heeft u een script dat u wilt aanmelden, stuur dit naar <a href="mailto:steve@opencommunity.co.uk">steve@opencommunity.co.uk</a> en nadat het is bekeken, zal het beschikbaar komen op de Downloads pagina.</p>
   <h2><a id="How_do_I_request_an_enhancement_in_Vienna" name="How_do_I_request_an_enhancement_in_Vienna">Hoe vraag ik om een verbetering aan Vienna?</a></h2>
   <p>Plaats een bericht in de <a href="https://github.com/ViennaRSS/vienna-rss/issues">issues list</a>.</p>
