--- a/Vienna Help/Resources/sv.lproj/faq.html
+++ b/Vienna Help/Resources/sv.lproj/faq.html
@@ -9,8 +9,8 @@
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Hur gör jag ... i Vienna?</span>
-  <p>Nedan är några av de vanligaste frågorna som ställs om Vienna medan den testades i förhand. Se den <a href="http://www.vienna-rss.com/vienna_faq.html">officiella sidan med vanliga frågor om Vienna</a> för dessa och de senaste tipsen om hur du använder Vienna.</p>
+  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Hur gör jag&nbsp;… i Vienna?</span>
+  <p>Nedan är några av de vanligaste frågorna som ställs om Vienna medan den testades i förhand. Se den <a href="https://www.vienna-rss.com/faq">officiella sidan med vanliga frågor om Vienna</a> för dessa och de senaste tipsen om hur du använder Vienna.</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">Jag har hittat ett problem med Vienna. Hur rapporterar jag det?</a></li>
     <li><a href="#How_can_I_see_what_happened_when_my_subscriptions_are_refreshed">Hur kan jag se vad som hände när mina prenumerationer uppdaterades?</a></li>
@@ -80,8 +80,8 @@
   <h2><a id="How_do_I_create_my_own_styles" name="How_do_I_create_my_own_styles">Hur skapar jag mina egna stilar?</a></h2>
   <p>Se sidan <a href="https://www.vienna-rss.com/extras/creating-custom-styles/">Egna stilar</a> för instruktioner.</p>
   <h2><a id="How_do_I_create_my_own_scripts" name="How_do_I_create_my_own_scripts">Hur skapar jag mina egna skript?</a></h2>
-  <p>Viennas skript är skrivna med AppleScript. Se <a href="http://developer.apple.com/applescript/">Apples resurssida</a> för mer information.</p>
-  <p>Ett sätt att komma igång är att ladda ner ett av de befintliga skripten som <a href="http://www.cortig.net/files/ShareWithPapers.zip">Cortigs ursprungliga Share with Papers-plugin</a> eller <a href="https://github.com/reefdog/Vienna-to-Yojimbo-AppleScripts">reefdogs Vienna till Yojimbo-skript</a> och se dem i AppleScript-redigeraren.</p>
+  <p>Viennas skript är skrivna med AppleScript. Se <a href="https://developer.apple.com/library/archive/documentation/AppleScript/Conceptual/AppleScriptX/AppleScriptX.html">Apples resurssida</a> för mer information.</p>
+  <p>Ett sätt att komma igång är att ladda ner ett av de befintliga skripten som <a href="https://www.cortig.net/files/ShareWithPapers.zip">Cortigs ursprungliga Share with Papers-plugin</a> eller <a href="https://github.com/reefdog/Vienna-to-Yojimbo-AppleScripts">reefdogs Vienna till Yojimbo-skript</a> och se dem i AppleScript-redigeraren.</p>
   <p>För att skicka in ditt eget skript, skicka det till supportforumet och efter att det har granskats kommer det att göras tillgängligt på sidan Nedladdningar.</p>
   <h2><a id="How_do_I_request_an_enhancement_in_Vienna" name="How_do_I_request_an_enhancement_in_Vienna">Hur begär jag en förbättring i Vienna?</a></h2>
   <p>Lägg upp ett meddelande på <a href="https://github.com/ViennaRSS/vienna-rss/issues">problemlistan</a>.</p>
