--- a/Vienna Help/Resources/da.lproj/faq.html
+++ b/Vienna Help/Resources/da.lproj/faq.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Hvordan gør jeg … i Vienna?</span>
-  <p>Below are some of the more common questions asked about Vienna while it was being pre-release tested. See the <a href="http://www.vienna-rss.com/vienna_faq.html">Official Vienna FAQ Page</a> for these and the latest hints and tips for using Vienna.</p>
+  <p>Nedenfor er nogle af de mere almindelige spørgsmål stillet vedrørende Vienna, mens den blev testet før udgivelse. Se den <a href="https://www.vienna-rss.com/faq">officielle Vienna FAQ side</a> for disse, samt de seneste hints og tips ved brug af Vienna.</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">I found a problem with Vienna. How do I report it?</a></li>
     <li><a href="#How_can_I_see_what_happened_when_my_subscriptions_are_refreshed">How can I see what happened when my subscriptions are refreshed?</a></li>
@@ -80,8 +80,8 @@
   <h2><a id="How_do_I_create_my_own_styles" name="How_do_I_create_my_own_styles">How do I create my own styles?</a></h2>
   <p>See the <a href="https://www.vienna-rss.com/extras/creating-custom-styles/">Custom Styles page</a> for instructions.</p>
   <h2><a id="How_do_I_create_my_own_scripts" name="How_do_I_create_my_own_scripts">How do I create my own scripts?</a></h2>
-  <p>Vienna's scripts are written using AppleScript. See the <a href="http://developer.apple.com/applescript/">Apple resource page</a> for more details.</p>
-  <p>One way to get started is to download one of the existing scripts like <a href="http://www.cortig.net/files/ShareWithPapers.zip">Cortig's original Share with Papers plugin</a> or <a href="https://github.com/reefdog/Vienna-to-Yojimbo-AppleScripts">reefdog's Vienna to Yojimbo script</a> and view them in the AppleScript editor.</p>
+  <p>Viennas skripter er skrevet i AppleScript. Se <a href="https://developer.apple.com/library/archive/documentation/AppleScript/Conceptual/AppleScriptX/AppleScriptX.html">Apples resourceside</a> for flere detaljer.</p>
+  <p>En måde at komme i gang på, er at hente et af de eksisterende skripter, såsom <a href="https://www.cortig.net/files/ShareWithPapers.zip">Cortigs originale Del med Papers udvidelse</a> eller <a href="https://github.com/reefdog/Vienna-to-Yojimbo-AppleScripts">reefdogs Vienna til Yojimbo skript</a> og se dem i AppleScript editoren.</p>
   <p>To submit your own script, send it the support forum and after it has been reviewed, it will be made available on the Downloads page.</p>
   <h2><a id="How_do_I_request_an_enhancement_in_Vienna" name="How_do_I_request_an_enhancement_in_Vienna">How do I request an enhancement in Vienna?</a></h2>
   <p>Post a message over at the <a href="https://github.com/ViennaRSS/vienna-rss/issues">issues list</a>.</p>
