--- a/Vienna Help/Resources/de.lproj/faq.html
+++ b/Vienna Help/Resources/de.lproj/faq.html
@@ -9,8 +9,8 @@
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">How Do I?</span>
-  <p>Below are some of the more common questions asked about Vienna while it was being pre-release tested. Schauen Sie auf der <a href="http://www.vienna-rss.com/vienna_faq.html">offizelle Vienna Hilfe Seite</a> für die neusten Tipps und Tricks nach.</p>
+  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">How do I&nbsp;… in Vienna?</span>
+  <p>Below are some of the more common questions asked about Vienna while it was being pre-release tested. See the <a href="https://www.vienna-rss.com/faq">Official Vienna FAQ Page</a> for these and the latest hints and tips for using Vienna.</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">I found a problem with Vienna. How do I report it?</a></li>
     <li><a href="#How_can_I_see_what_happened_when_my_subscriptions_are_refreshed">How can I see what happened when my subscriptions are refreshed?</a></li>
@@ -75,13 +75,13 @@
   <h2><a id="What_do_the_green_dots_mean_in_the_list_of_articles" name="What_do_the_green_dots_mean_in_the_list_of_articles">What do the green dots mean in the list of articles?</a></h2>
   <p>The blue dots are for new articles, and the green dots are for updated articles: articles whose text has changed since they were last downloaded.</p>
   <h2><a id="How_do_I_use_Auto_Expire_and_what_does_it_do" name="How_do_I_use_Auto_Expire_and_what_does_it_do">How do I use Auto Expire and what does it do?</a></h2>
-  <p>Auto-expire moves articles older than a certain number of days to the Trash folder. It allows you to keep your folders manageable by only retaining articles that are recent. The auto-expire runs both when Vienna starts and after you have refreshed any subscriptions. To control the age of articles to auto-expire, change the "Move articles to Trash" option in Preferences.</p>
+  <p>Auto-expire moves articles older than a certain number of days to the Trash folder. It allows you to keep your folders manageable by only retaining articles that are recent. The auto-expire runs both when Vienna starts and after you have refreshed any subscriptions. To control the age of articles to auto-expire, change the "Move articles to Trash" option in General settings.</p>
   <p>Auto-expire will NOT remove unread or flagged articles. It assumes that you haven't read these articles and thus leaves them alone.</p>
   <h2><a id="How_do_I_create_my_own_styles" name="How_do_I_create_my_own_styles">How do I create my own styles?</a></h2>
   <p>See the <a href="https://www.vienna-rss.com/extras/creating-custom-styles/">Custom Styles page</a> for instructions.</p>
   <h2><a id="How_do_I_create_my_own_scripts" name="How_do_I_create_my_own_scripts">How do I create my own scripts?</a></h2>
-  <p>Vienna's scripts are written using AppleScript. See the <a href="http://developer.apple.com/applescript/">Apple resource page</a> for more details.</p>
-  <p>One way to get started is to download one of the existing scripts like <a href="http://www.cortig.net/files/ShareWithPapers.zip">Cortig's original Share with Papers plugin</a> or <a href="https://github.com/reefdog/Vienna-to-Yojimbo-AppleScripts">reefdog's Vienna to Yojimbo script</a> and view them in the AppleScript editor.</p>
+  <p>Vienna's scripts are written using AppleScript. See the <a href="https://developer.apple.com/library/archive/documentation/AppleScript/Conceptual/AppleScriptX/AppleScriptX.html">Apple resource page</a> for more details.</p>
+  <p>One way to get started is to download one of the existing scripts like <a href="https://www.cortig.net/files/ShareWithPapers.zip">Cortig's original Share with Papers plugin</a> or <a href="https://github.com/reefdog/Vienna-to-Yojimbo-AppleScripts">reefdog's Vienna to Yojimbo script</a> and view them in the AppleScript editor.</p>
   <p>To submit your own script, send it the support forum and after it has been reviewed, it will be made available on the Downloads page.</p>
   <h2><a id="How_do_I_request_an_enhancement_in_Vienna" name="How_do_I_request_an_enhancement_in_Vienna">How do I request an enhancement in Vienna?</a></h2>
   <p>Post a message over at the <a href="https://github.com/ViennaRSS/vienna-rss/issues">issues list</a>.</p>
